--- a/app/views/web/ost/new-partners/_use_cases.erb
+++ b/app/views/web/ost/new-partners/_use_cases.erb
@@ -7,7 +7,7 @@
     use_cases =  [{
                          :title => 'ConnectScale',
                          :description => "ConnectScale is a sports fishing social community built around a connected device for weighing and tracking catch data from fishing trips.",
-                         :youtube_img => "https://img.youtube.com/vi/MjtcnnqmVBk/hqdefault.jpg",
+                         :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
                          :youtube_link => "https://www.youtube.com/embed/MjtcnnqmVBk" + autoplay_version,
                          :project_link => "https://connectscale.com/",
                      },
