--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -929,7 +929,7 @@
     <div class="row mt-5">
       <% partner_companies.each_with_index do|partner, index| %>
         <div class="col-6 col-md-3 p-0 category-all size-all visible <%= 'category-'+partner[:categories].join(" category-") %> size-<%= partner[:size] %>">
-          <div class="aspect-ratio-box" title="<%= 'category-'+partner[:categories].join(" category-") %> size-<%= partner[:size] %>">
+          <div class="aspect-ratio-box" data-toggle="modal" data-target="#infoModal-<%=index %>" title="<%= 'category-'+partner[:categories].join(" category-") %> size-<%= partner[:size] %>">
             <span class="aspect-ratio-box-inside partner-company" style="background-position-y: <%= ((100.00/(partner_companies_count-1))* partner[:sprite_index]).round(2)%>%;" data-toggle="modal" data-target="#infoModal-<%=index %>" data-partner_companies_index="<%=index %>"></span>
             <% if partner[:has_exited] == true%>
               <div class="position-absolute" style="top: 10px;right: 10px;font-size: 0;">
