--- a/app/views/web/ost/new-partners/_use_cases.erb
+++ b/app/views/web/ost/new-partners/_use_cases.erb
@@ -106,7 +106,7 @@
       <% end %>
   </div>
   <div class="text-center">
-    <a class="btn btn-secondary text-center mt-lg-5 mt-3" href="/challenges">
+    <a class="btn btn-secondary text-center mt-5" href="/challenges">
       VIEW ALL POC PROJECTS
     </a>
   </div>
