--- a/app/assets/stylesheets/web/ost/new-partners/Icons.scss
+++ b/app/assets/stylesheets/web/ost/new-partners/Icons.scss
@@ -1,16 +1,6 @@
 $sprite-retina-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/partner-companies-sprite-3@2x.png";
 $sprite-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/partner-companies-sprite-3@1x.png";
 
-.aspect-ratio-box{
-  &:hover{
-    .partner-company{
-     background-position-x: 100%;
-     background-position-y: 0;
-     background-size: 200%;
-    }
-  }
-}
-
 .partner-company{
   background-image: url($sprite-location);
   @media only screen and (-webkit-min-device-pixel-ratio: 2),
@@ -28,5 +18,38 @@ $sprite-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/part
   background-position-x: 0;
   background-position-y: 0;
   background-size: 200%;
+  display:block;
+}
+
+.aspect-ratio-box{
+  &:hover{
+    .partner-company{
+      background-position-x: 100%;
+      background-position-y: 0;
+      background-size: 200%;
+    }
+  }
+}
+
+
+$partners-details-sprite-retina: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/partners-details-sprite-2@2x.png";
+$partners-details-sprite: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/partners-details-sprite-2@1x.png";
+
+.details-partner-company{
+  background-image: url($partners-details-sprite);
+  @media only screen and (-webkit-min-device-pixel-ratio: 2),
+  only screen and (min--moz-device-pixel-ratio: 2),
+  only screen and (-o-min-device-pixel-ratio: 2/1),
+  only screen and (min-device-pixel-ratio: 2),
+  only screen and (min-resolution: 192dpi),
+  only screen and (min-resolution: 2dppx) {
+    background-image: url($partners-details-sprite-retina);
+  }
+  width: 80%;
+  height: 0;
+  padding-bottom: 20%;
+  background-position-x: 0;
+  background-position-y: 0;
+  background-size: 100%;
   display:block;
 }
