--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -952,7 +952,7 @@
                   <div class="row">
                     <div class="col-12 col-md-9">
                       <div class="mt-3 mb-2">
-                        <img src="" alt="Image not found" >
+                        <span class="details-partner-company" style="background-position-y: <%= ((100.00/(partner_companies_count-1))* partner[:sprite_index]).round(2)%>%;"></span>
                       </div>
                       <div class="description">
                         <%= raw partner[:description_html] %>
