partial data changes

--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -2,29 +2,130 @@
   partner_companies_count = 29;
   partner_companies = [
       {
-          name:"LGBT Foundation",
-          categories: ["social-creative" ,"community"],
+          name:"Unsplash",
+          categories: ["social-creative"],
           size: "large",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
           sprite_index: 0,
           has_exited: false,
+          description_html: 'Unsplash is the world’s leading photography platform. Unsplash served more than 5.4 Billion photo views in January, up more than 300% from 12 months ago. Unsplash and OST are partnering to reinvent, decentralize, and democratize photography.',
+          founders: [
+              {
+                  name: 'Steph Liverani'
+              },
+              {
+                  name: 'Mikael Cho'
+              },
+              {
+                  name: 'Luke Chesser'
+              }
+          ],
+          location: 'Montreal',
+          website: 'https://unsplash.com/',
+          social: [
+              {
+                  name: 'Twitter',
+                  link:'https://twitter.com/unsplash'
+              },
+              {
+                  name: 'Medium',
+                  link: 'https://medium.com/unsplash'
+              },
+              {
+                  name: 'LikedIn',
+                  link: 'https://www.linkedin.com/company/unsplash/'
+              }
+          ]
+      },
+      {
+          name:"LGBT Foundation",
+          categories: ["social-creative","community"],
+          size: "large",
+          on_hover_bgcolor: "classname",
+          on_hover_imgcolor: "classname",
+          sprite_index: 1,
+          has_exited: false,
           description_html: 'The LGBT Foundation will be launching the LGBT Token to empower, connect and support LGBT+ people all over the world. One of its first launch partners is Hornet Networks, a social platform for gay men with more than 24 million users worldwide.',
           founders: [
               {
-                  name: 'Christoph Wittig',
-                  title: 'Not known'
+                  name: 'Christoph Wittig'
+
               }
           ],
           location: 'London',
           website: 'https://lgbt.foundation/',
           social: [
               {
-                  name: 'not known ',
-                  link:"link"
+                  name: 'Twitter',
+                  link:"https://twitter.com/LGBTfdn"
+
+              },
+              {
+                  name: 'Medium',
+                  link: 'https://medium.com/lgbt-foundation'
+              },
+              {
+                  name: 'LinkedIn',
+                  link: 'https://www.linkedin.com/company/lgbt/'
+              }
+          ]
+
+      },
+      {
+          name:"Gushcloud",
+          categories: ["social-creative"],
+          size: "large",
+          on_hover_bgcolor: "classname",
+          on_hover_imgcolor: "classname",
+          sprite_index: 2,
+          has_exited: false,
+          description_html: 'Gushcloud is Asia’s leading influencer marketing and entertainment network that connects audiences and brands with more than 12,000 global influencers and creators. We have been exploring tokenization across rewarding and incentivizing online influencer marketing, micro-payments, gaming, and analytics.',
+          founders: [
+              {
+                  name: 'Vincent Ha'
+              }
+
+          ],
+          location: 'Singapore',
+          social: [
+              {
+                  name: 'Twitter',
+                  link:"https://twitter.com/Gushcloud_"
+
+              },
+              {
+                  name: 'LinkedIn',
+                  link: 'https://www.linkedin.com/company/gushcloud/'
+              }
+          ]
+
+      },
+      {
+          name:"LytePay",
+          categories: ["marketplace"],
+          size: "start-up",
+          on_hover_bgcolor: "classname",
+          on_hover_imgcolor: "classname",
+          sprite_index: 3,
+          has_exited: false,
+          description_html: 'LytePay is building a industry-standard decentralized finance platform for the gig economy. Partnering with OST, they hope to build a compassionate banking platform of the future, providing freelancers everywhere with access to affordable capital, fair insurance, and benefits from community membership.',
+          founders:  [
+              {
+                  name: 'Vincent Ha'
+              }
+
+          ],
+          location: 'Singapore',
+          website: 'https://lytepay.co/login',
+          social: [
+              {
+                  name: 'medium',
+                  link:"https://medium.com/unsplash"
 
               }
           ]
+
       },
       {
           name:"FinComEco",
@@ -32,150 +133,58 @@
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          sprite_index: 1,
+          sprite_index: 4,
           has_exited: false,
           description_html: 'GMEX, Block Commodities Ltd. and FinComEco are endeavouring to build a tokenised ecosystem of e-commerce partners featuring local vendors and service providers, as well as medical and educational institutions, where the FACES tokens can be redeemed.',
           founders: [
               {
                   name: 'Hirander Misra',
-                  title: 'Not known'
+
               }
+
           ],
           location: 'London',
           website: 'http://www.fincomeco.com/',
           social: [
               {
-                  name: 'not known ',
-                  link:"link"
+                  name: 'Twitter',
+                  link:"https://twitter.com/FinComEco"
 
+              },
+              {
+                  name: 'LinkedIn',
+                  link: 'https://www.linkedin.com/company/fincomeco/'
               }
           ]
 
       },
       {
-          name:"Unsplash",
-          categories: ["social-creative"],
-          size: "large",
-          on_hover_bgcolor: "classname",
-          on_hover_imgcolor: "classname",
-          sprite_index: 2,
-          has_exited: false,
-          description_html: 'Unsplash is the world’s leading photography platform. Unsplash served more than 5.4 Billion photo views in January, up more than 300% from 12 months ago. Unsplash and OST are partnering to reinvent, decentralize, and democratize photography.',
-          founders: [
-              {
-                  name: 'Steph Liverani',
-                  title: 'Not known'
-              },
-              {
-                  name: 'Mikael Cho',
-                  title: 'Not known'
-              },
-              {
-                  name: 'Luke Chesser',
-                  title: 'not known'
-              }
-
-          ],
-          location: 'Montreal',
-          website: 'https://unsplash.com/',
-          social: [
-              {
-                  name: 'medium',
-                  link:"https://medium.com/unsplash"
-
-              }
-          ]
-
-      },
-      {
-          name:"Fainin",
-          categories: ["sharing-economy"],
-          size: "start-up",
-          on_hover_bgcolor: "classname",
-          on_hover_imgcolor: "classname",
-          sprite_index: 3,
-          has_exited: false,
-          description_html: 'When one of the founders was living in a dorm, he saw the need for a well-organised way to borrow stuff you rarely use. Like a drill or a tripod. Backed by a major insurer, Fainin will also feature “try before you buy” and “rent on location” products, like a pair of skis when staying at an AirBnB in the Alps.',
-          founders: [
-              {
-                  name: 'Steph Liverani',
-                  title: 'Not known'
-              },
-              {
-                  name: 'Mikael Cho',
-                  title: 'Not known'
-              },
-              {
-                  name: 'Luke Chesser',
-                  title: 'not known'
-              }
-
-          ],
-          location: 'Berlin',
-          website: 'https://unsplash.com/',
-          social: [
-              {
-                  name: 'medium',
-                  link:"https://medium.com/unsplash"
-
-              }
-          ]
-
-      },
-      {
-          name:"The Brightly Co.",
-          categories: ["marketplace"],
-          size: "start-up",
-          on_hover_bgcolor: "classname",
-          on_hover_imgcolor: "classname",
-          sprite_index: 4,
-          has_exited: false,
-          description_html: 'The Brightly Co.wants to change the world through conscious shopping. They are catering to the millennial generation, who are overwhelmingly supportive (72%) of buying products that are made ethically and sustainably. With an annual spending power of over $200B, millennials can make a difference!',
-          founders: [
-              {
-                  name: 'Laura Alexander Wittig',
-                  title: 'Co-Founder?'
-              }
-
-          ],
-          location: 'Oakland',
-          website: 'https://thebrightly.co/',
-          social: [
-              {
-                  name: 'not known',
-                  link:"not known "
-
-              }
-          ]
-
-      },
-      {
-          name:"Twilala",
-          categories: ["social-creative"],
+          name:"Wooshii",
+          categories: ["social-creative","marketplace"],
           size: "start-up",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
           sprite_index: 5,
           has_exited: false,
-          description_html: 'Twilala connects people in your area who share a mutual interest, from climbing mountains to wine tasting. You can use their app to exchange ideas, recommend locations or to organize meet-ups for like-minded people. Though currently focused on the Spanish market, Twilala hopes to cater to millions of people all over the world by 2020.',
+          description_html: 'Wooshii is both a marketplace and a platform for video producers to collaborate on videos for external clients. It is the video production management solution powering the world’s video teams for corporate clients including Google, eBay, Virgin, Merck, eBay, and British Airways.',
           founders: [
               {
-                  name: 'Miquel Clariana',
-                  title: 'Not known'
-              },
-              {
-                  name: 'Marta Gimeno Robles',
-                  title: 'not known'
+                  name: 'Fergus Dyer-Smith',
+
               }
 
           ],
-          location: 'Barcelona',
-          website: 'https://www.twilala.es/',
+          location: 'London',
+          website: 'https://wooshii.com/',
           social: [
               {
-                  name: 'not known',
-                  link:"not known "
+                  name: 'Twitter',
+                  link:"https://twitter.com/wooshii"
 
+              },
+              {
+                  name: 'LinkedIn',
+                  link: 'https://twitter.com/wooshii'
               }
           ]
 
