--- a/app/views/web/ost/new-partners/_contact_us.erb
+++ b/app/views/web/ost/new-partners/_contact_us.erb
@@ -11,21 +11,21 @@
         <form action="/api/home/partners/contact-us" class="custom-form col-10 col-md-6 col-xl-5 mx-auto" id="partners-contact-us-form">
           <div class="input-container">
             <label>FULL NAME</label>
-            <input class="input" id="full_name" type="text" name="full_name" value="" title="full name" required autocomplete="off" />
+            <input class="input" id="full_name" type="text" name="full_name" value="" title="Full name" required autocomplete="off" />
             <span class="input-border"></span>
           </div>
           <div class="error" data-for="full_name"></div>
 
           <div class="input-container">
             <label>EMAIL ADDRESS</label>
-            <input class="input" id="email" type="email" name="email" value="" title="email address" required autocomplete="off" />
+            <input class="input" id="email" type="email" name="email" value="" title="Email address" required autocomplete="off" />
             <span class="input-border"></span>
           </div>
           <div class="error" data-for="email"></div>
 
           <div class="input-container">
             <label>COMPANY NAME</label>
-            <input class="input" id="company" type="text" name="company" value="" title="company name" required autocomplete="off" />
+            <input class="input" id="company" type="text" name="company" value="" title="Company name" required autocomplete="off" />
             <span class="input-border"></span>
           </div>
           <div class="error" data-for="company"></div>
@@ -39,7 +39,7 @@
 
           <div class="form-group m-0">
             <label for="subscribe_confirmation" class="label-cbx mb-0 w-100">
-              <input id="subscribe_confirmation" type="checkbox" name="subscribe_confirmation" value="1">
+              <input id="subscribe_confirmation" type="checkbox" name="subscribe_confirmation" value="1" title="subscribe confirmation" required>
               <div class="checkbox">
                 <svg width="18px" height="18px" viewBox="0 0 20 20">
                   <path d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"></path>
