--- a/app/views/web/ost/new-partners/_use_cases.erb
+++ b/app/views/web/ost/new-partners/_use_cases.erb
@@ -7,21 +7,21 @@
     use_cases =  [{
                          :title => 'ConnectScale',
                          :description => "ConnectScale is a sports fishing social community built around a connected device for weighing and tracking catch data from fishing trips.",
-                         :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
+                         :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/Connect_scale1x.png",
                          :youtube_link => "https://www.youtube.com/embed/MjtcnnqmVBk" + autoplay_version,
                          :project_link => "https://connectscale.com/",
                      },
                      {
                          :title => "Fainin",
                          :description => "When one of the founders was living in a dorm, he saw the need for a well-organised way to borrow stuff you rarely use. Like a drill or a tripod. Backed by a major insurer, Fainin will also feature “try before you buy” and “rent on location” products, like a pair of skis when staying at an AirBnB in the Alps.",
-                         :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
+                         :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/fainin1x.png",
                          :youtube_link => "https://www.youtube.com/embed/EMVczADfNOo" + autoplay_version,
                          :project_link => "https://fainin.com/en/",
                      },
                      {
                          :title => "License.Rocks",
                          :description => "License.Rocks is building a platform for decentralized software licensing through tokenization. Their vision is to build a framework for defining how digital products such as software can be licensed and create new business opportunities and sales channels for creators of digital products.",
-                         :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-hard-gaming.png",
+                         :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/License_rock1.png",
                          :youtube_link => "https://www.youtube.com/embed/wJ6XkOIkbX0" + autoplay_version,
                          :project_link => "https://license.rocks/"
 
@@ -29,14 +29,14 @@
                      {
                          :title => "Radmule Labs",
                          :description => "RadMule Labs is a mobile game studio focusing on new and innovative ways of gaming. By building a game that has a token economy using OST Radmule wants to let players earn tokens they can spend on other apps in the OST network.",
-                         :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-coner.png",
+                         :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/Radmule1.png",
                          :youtube_link => "https://www.youtube.com/embed/thxQOtO2fIc" + autoplay_version,
                          :project_link => "https://www.radmule.com/"
                      },
                      {
                          :title => 'The Brightly Co.',
                          :description => "The Brightly Co.wants to change the world through conscious shopping. They are catering to the millennial generation, who are overwhelmingly supportive (72%) of buying products that are made ethically and sustainably. With an annual spending power of over $200B, millennials can make a difference!",
-                         :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-read-it.png",
+                         :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/the-brightly-Co.1.png",
                          :youtube_link => "https://www.youtube.com/embed/iXBIgdoMnQE" + autoplay_version,
                          :project_link => "https://thebrightly.co/",
 
@@ -52,7 +52,7 @@
                       {
                           :title => "Twilala",
                           :description => "Twilala connects people in your area who share a mutual interest, from climbing mountains to wine tasting. You can use their app to exchange ideas, recommend locations or to organize meet-ups for like-minded people. Though currently focused on the Spanish market, Twilala hopes to cater to millions of people all over the world by 2020.",
-                          :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-coner.png",
+                          :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/Twilala1.png",
                           :youtube_link => "https://www.youtube.com/embed/97XSaBteNv8" + autoplay_version,
                           :project_link => "https://www.twilala.es/"
                       },
