--- a/app/views/web/ost/new-partners/_jumbotron.erb
+++ b/app/views/web/ost/new-partners/_jumbotron.erb
@@ -8,7 +8,7 @@
           We're building the complete blockchain toolkit for business. OST, built on the OpenST protocol, enables any business to easily deploy and manage their own branded crypto-backed token economies on open scalable side blockchains. OST partners benefit by providing direct input into our features and roadmap.
         </p>
         <a href="#contactus" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="Contact Us">Contact Us</a>
-        <a href="" target="_blank" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="Meet Our Partners">Meet Our Partners</a>
+        <a href="#partner-companies" target="_blank" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="Meet Our Partners">Meet Our Partners</a>
       </div>
 
       <div class="col-md-12 col-lg-6 text-center mt-4 mt-md-0">
