modal vertically centered on staging

--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -990,7 +990,7 @@
         <% content_for :end_js do %>
           <!-- Modal: infoModal-<%=index %> -->
           <div class="modal fade right modal-company" id="infoModal-<%=index %>">
-            <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-dialog modal-dialog-centered h-100">
               <div class="modal-content p-2 p-sm-5">
                 <div>
                   <button type="button" class="close close-btn" data-dismiss="modal">&times;</button>
