--- a/app/views/web/ost/new-partners/_industries.erb
+++ b/app/views/web/ost/new-partners/_industries.erb
@@ -26,7 +26,7 @@
           </svg>
           <div class="title-text mt-2">LOYALTY</div>
         </a>
-        <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="DApp">
+        <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="dapps">
           <svg class="svg">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-dapps"></use>
