--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -926,11 +926,11 @@
 
   }
 %>
-<section id="partner-companies" class="container-partner-companies position-relative pt-5">
+<section class="container-partner-companies position-relative pt-5">
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
-        <h2 class="mt-5 pt-4 mb-4 text-center">Partner Companies</h2>
+        <h2 class="mt-5 pt-4 mb-4 text-center" id="partner-companies">Partner Companies</h2>
       </div>
     </div>
     <div class="row">
