--- a/app/views/web/ost/index/_blockchain_toolkit.erb
+++ b/app/views/web/ost/index/_blockchain_toolkit.erb
@@ -8,7 +8,7 @@
       </svg>
       <h1>The Complete Blockchain Toolkit for Business</h1>
       <p>
-        OST KIT gives you all the tools you need to run your blockchain-powered economy on open scalable sidechains. Launch your own Branded Token without the ICO drama. Visit the OST KIT page to login for Alpha II or to sign up for the third phase!
+        OST KIT gives you all the tools you need to run your blockchain-powered economy on open scalable sidechains. No need to go through an ICO: Launch your own Branded Token within minutes. Visit the OST KIT page for more information.
       </p>
       <ul class="list-unstyled">
         <li class="clearfix">
@@ -33,6 +33,16 @@
         </li>
         <li class="clearfix">
           <span class="float-left">Transactions</span>
+          <span class="float-right">
+            <svg class="svg icon-checkmark">
+              <switch>
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-checkmark-gold"></use>
+              </switch>
+            </svg>
+          </span>
+        </li>
+        <li class="clearfix">
+          <span class="float-left">User Balances & Transaction History</span>
           <span class="float-right">
             <svg class="svg icon-checkmark">
               <switch>
