--- a/app/views/web/ost/index/_powered_by_ost.erb
+++ b/app/views/web/ost/index/_powered_by_ost.erb
@@ -1,13 +1,7 @@
 <section class="container-fluid container-powered position-relative ost pt-5">
   <div class="row">
     <div class="col col-md-6 mx-md-auto text-center">
-      <h1>Also Powered by
-        <svg class="ost-powered-logo">
-          <switch>
-            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-logo"></use>
-          </switch>
-        </svg>
-      </h1>
+      <h1>OST blockchain infrastructure: Transparent and compliant</h1>
       <p>
         OST is always improving our blockchain toolkit with new features and real-world solutions. Discover more ways OST can help transform your business!
       </p>
