new youtube link

--- a/app/views/web/ost/new-partners/_use_cases.erb
+++ b/app/views/web/ost/new-partners/_use_cases.erb
@@ -49,8 +49,8 @@
                       {
                           :title => 'Touriocity',
                           :description => "The people behind this London-based startup used to run their own tour company in Rome, when they noticed a growing in trend in people looking for tailor-made itineraries. Tour buses and the same old, tired walk around the Colosseum just didn’t cut it anymore: Touriocity is all about making citytrips a unique, personal experience.",
-                          :youtube_img_1x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-read-it.png",
-                          :youtube_img_2x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-read-it.png",
+                          :youtube_img_1x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/Touriocity1.png",
+                          :youtube_img_2x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/Touriocity@2x.png",
                           :youtube_link => "https://www.youtube.com/embed/Ulrsx3Q5PhA" + autoplay_version,
                           :project_link => "https://touriocity.com/#!/",
 
