CO-84: blur modal

--- a/app/views/web/ost/new-partners/_contact_us.erb
+++ b/app/views/web/ost/new-partners/_contact_us.erb
@@ -63,23 +63,6 @@
           <div class="error text-center" data-for="general_error"></div>
         </form>
 
-        <div id="successModal" class="modal fade user-modal" role="dialog" tabindex="-1">
-          <div class="modal-dialog modal-dialog-centered modal-lg h-100 mx-auto my-0">
-            <div class="modal-content rounded-0">
-              <div class="modal-body text-center py-4">
-                <svg class="icon" style="width:50px; height: 50px">
-                  <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#success-icon">
-                    </use>
-                  </switch>
-                </svg>
-                <h5>Thank you for contacting us.</h5>
-                <h5>We have received your request and our team will get back to you very soon.</h5>
-                <button class="btn btn-primary mt-4" title="Close" data-dismiss="modal">Close</button>
-              </div>
-            </div>
-          </div>
-        </div>
 
       </div>
     </div>
@@ -89,5 +72,24 @@
 <% content_for :head_js do %>
 <script src="https://www.google.com/recaptcha/api.js"></script>
 <%end%>
+<% content_for :end_js do %>
+  <div id="successModal" class="modal fade user-modal" role="dialog" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered modal-lg h-100 mx-auto my-0">
+      <div class="modal-content rounded-0">
+        <div class="modal-body text-center py-4">
+          <svg class="icon" style="width:50px; height: 50px">
+            <switch>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#success-icon">
+              </use>
+            </switch>
+          </svg>
+          <h5>Thank you for contacting us.</h5>
+          <h5>We have received your request and our team will get back to you very soon.</h5>
+          <button class="btn btn-primary mt-4" title="Close" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
 
 
