Close detail view through keyboard "esc" should be possible
"View all POC Porjects": By click please open the winner's page in a new window

--- a/app/views/web/ost/new-partners/_use_cases.erb
+++ b/app/views/web/ost/new-partners/_use_cases.erb
@@ -102,9 +102,7 @@
     <% end %>
   </div>
   <div class="text-center">
-    <a class="btn btn-secondary text-center mt-5" href="/challenges">
-      VIEW ALL POC PROJECTS
-    </a>
+    <a class="btn btn-secondary text-center mt-5" href="/challenges" title="VIEW ALL POC PROJECTS" target="_blank">VIEW ALL POC PROJECTS</a>
   </div>
 </section>
 
