--- a/app/views/web/ost/new-partners/_industries.erb
+++ b/app/views/web/ost/new-partners/_industries.erb
@@ -11,7 +11,7 @@
       </div>
       <div class="row">
         <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="social-creative">
-          <svg class="svg">
+          <svg class="creative">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-creative"></use>
             </switch>
@@ -19,7 +19,7 @@
           <div class="title-text mt-2">CREATIVE & SOCIAL</div>
         </a>
         <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="loyalty">
-          <svg class="svg">
+          <svg class="loyalty">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-loyalty"></use>
             </switch>
@@ -27,7 +27,7 @@
           <div class="title-text mt-2">LOYALTY</div>
         </a>
         <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="dapps">
-          <svg class="svg">
+          <svg class="dapps">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-dapps"></use>
             </switch>
@@ -35,7 +35,7 @@
           <div class="title-text mt-2">DAPPS</div>
         </a>
         <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="marketplace">
-          <svg class="svg">
+          <svg class="marketplaces">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-marketplaces"></use>
             </switch>
@@ -43,7 +43,7 @@
           <div class="title-text mt-2">MARKETPLACES</div>
         </a>
         <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="community">
-          <svg class="svg">
+          <svg class="community">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-community"></use>
             </switch>
@@ -51,7 +51,7 @@
           <div class="title-text mt-2">COMMUNITY</div>
         </a>
         <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="sharing-economy">
-          <svg class="svg">
+          <svg class="economy">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-sharing-economy"></use>
             </switch>
