--- a/app/views/web/ost/new-partners/_use_cases.erb
+++ b/app/views/web/ost/new-partners/_use_cases.erb
@@ -4,65 +4,70 @@
   </div>
   <%
     autoplay_version = "?rel=0&autoplay=1";
-    use_cases =  [{
-                         :title => 'ConnectScale',
-                         :description => "ConnectScale is a sports fishing social community built around a connected device for weighing and tracking catch data from fishing trips.",
-                         :youtube_img_1x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/connect_scale-1@1x.png",
-                         :youtube_img_2x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/connect_scale-1@2x.png",
-                         :youtube_link => "https://www.youtube.com/embed/MjtcnnqmVBk" + autoplay_version,
-                         :project_link => "https://connectscale.com/",
+    use_cases =  [
+                     {
+                       :title => "Fainin",
+                       :description => "When one of the founders was living in a dorm, he saw the need for a well-organised way to borrow stuff you rarely use. Like a drill or a tripod. Backed by a major insurer, Fainin will also feature “try before you buy” and “rent on location” products, like a pair of skis when staying at an AirBnB in the Alps.",
+                       :youtube_img_1x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/fainin-1@1x.png",
+                       :youtube_img_2x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/fainin-1@2x.png",
+                       :youtube_link => "https://www.youtube.com/embed/EMVczADfNOo" + autoplay_version,
+                       :project_link => "https://fainin.com/en/",
+                       :project_link_name => "Fainin"
                      },
                      {
-                         :title => "Fainin",
-                         :description => "When one of the founders was living in a dorm, he saw the need for a well-organised way to borrow stuff you rarely use. Like a drill or a tripod. Backed by a major insurer, Fainin will also feature “try before you buy” and “rent on location” products, like a pair of skis when staying at an AirBnB in the Alps.",
-                         :youtube_img_1x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/fainin-1@1x.png",
-                         :youtube_img_2x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/fainin-1@2x.png",
-                         :youtube_link => "https://www.youtube.com/embed/EMVczADfNOo" + autoplay_version,
-                         :project_link => "https://fainin.com/en/",
+                       :title => 'The Brightly Co.',
+                       :description => "The Brightly Co.wants to change the world through conscious shopping. They are catering to the millennial generation, who are overwhelmingly supportive (72%) of buying products that are made ethically and sustainably. With an annual spending power of over $200B, millennials can make a difference!",
+                       :youtube_img_1x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/the_brightly_co-1@1x.png",
+                       :youtube_img_2x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/the_brightly_co-1@2x.png",
+                       :youtube_link => "https://www.youtube.com/embed/iXBIgdoMnQE" + autoplay_version,
+                       :project_link => "https://thebrightly.co/",
+                       :project_link_name => "The Brightly Co."
                      },
                      {
-                         :title => "License.Rocks",
-                         :description => "License.Rocks is building a platform for decentralized software licensing through tokenization. Their vision is to build a framework for defining how digital products such as software can be licensed and create new business opportunities and sales channels for creators of digital products.",
-                         :youtube_img_1x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/license_rock-1@1x.png",
-                         :youtube_img_2x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/license_rock-1@2x.png",
-                         :youtube_link => "https://www.youtube.com/embed/wJ6XkOIkbX0" + autoplay_version,
-                         :project_link => "https://license.rocks/"
-
+                       :title => 'Touriocity',
+                       :description => "The people behind this London-based startup used to run their own tour company in Rome, when they noticed a growing in trend in people looking for tailor-made itineraries. Tour buses and the same old, tired walk around the Colosseum just didn’t cut it anymore: Touriocity is all about making citytrips a unique, personal experience.",
+                       :youtube_img_1x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/Touriocity1.png",
+                       :youtube_img_2x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/Touriocity@2x.png",
+                       :youtube_link => "https://www.youtube.com/embed/Ulrsx3Q5PhA" + autoplay_version,
+                       :project_link => "https://touriocity.com/#!/",
+                       :project_link_name => "Touriocity"
                      },
                      {
-                         :title => "Radmule Labs",
-                         :description => "RadMule Labs is a mobile game studio focusing on new and innovative ways of gaming. By building a game that has a token economy using OST Radmule wants to let players earn tokens they can spend on other apps in the OST network.",
-                         :youtube_img_1x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/radmule-1@1x.png",
-                         :youtube_img_2x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/radmule-1@2x.png",
-                         :youtube_link => "https://www.youtube.com/embed/thxQOtO2fIc" + autoplay_version,
-                         :project_link => "https://www.radmule.com/"
+                       :title => "Radmule Labs",
+                       :description => "RadMule Labs is a mobile game studio focusing on new and innovative ways of gaming. By building a game that has a token economy using OST Radmule wants to let players earn tokens they can spend on other apps in the OST network.",
+                       :youtube_img_1x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/radmule-1@1x.png",
+                       :youtube_img_2x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/radmule-1@2x.png",
+                       :youtube_link => "https://www.youtube.com/embed/thxQOtO2fIc" + autoplay_version,
+                       :project_link => "https://www.radmule.com/",
+                       :project_link_name => "Radmule Labs"
                      },
                      {
-                         :title => 'The Brightly Co.',
-                         :description => "The Brightly Co.wants to change the world through conscious shopping. They are catering to the millennial generation, who are overwhelmingly supportive (72%) of buying products that are made ethically and sustainably. With an annual spending power of over $200B, millennials can make a difference!",
-                         :youtube_img_1x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/the_brightly_co-1@1x.png",
-                         :youtube_img_2x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/the_brightly_co-1@2x.png",
-                         :youtube_link => "https://www.youtube.com/embed/iXBIgdoMnQE" + autoplay_version,
-                         :project_link => "https://thebrightly.co/",
-
+                       :title => "Twilala",
+                       :description => "Twilala connects people in your area who share a mutual interest, from climbing mountains to wine tasting. You can use their app to exchange ideas, recommend locations or to organize meet-ups for like-minded people. Though currently focused on the Spanish market, Twilala hopes to cater to millions of people all over the world by 2020.",
+                       :youtube_img_1x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/twilala-1@1x.png",
+                       :youtube_img_2x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/twilala-1@2x.png",
+                       :youtube_link => "https://www.youtube.com/embed/97XSaBteNv8" + autoplay_version,
+                       :project_link => "https://www.twilala.es/",
+                       :project_link_name => "Twilala"
                      },
-                      {
-                          :title => 'Touriocity',
-                          :description => "The people behind this London-based startup used to run their own tour company in Rome, when they noticed a growing in trend in people looking for tailor-made itineraries. Tour buses and the same old, tired walk around the Colosseum just didn’t cut it anymore: Touriocity is all about making citytrips a unique, personal experience.",
-                          :youtube_img_1x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/Touriocity1.png",
-                          :youtube_img_2x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/Touriocity@2x.png",
-                          :youtube_link => "https://www.youtube.com/embed/Ulrsx3Q5PhA" + autoplay_version,
-                          :project_link => "https://touriocity.com/#!/",
-
-                      },
-                      {
-                          :title => "Twilala",
-                          :description => "Twilala connects people in your area who share a mutual interest, from climbing mountains to wine tasting. You can use their app to exchange ideas, recommend locations or to organize meet-ups for like-minded people. Though currently focused on the Spanish market, Twilala hopes to cater to millions of people all over the world by 2020.",
-                          :youtube_img_1x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/twilala-1@1x.png",
-                          :youtube_img_2x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/twilala-1@2x.png",
-                          :youtube_link => "https://www.youtube.com/embed/97XSaBteNv8" + autoplay_version,
-                          :project_link => "https://www.twilala.es/"
-                      },
+                     {
+                       :title => "License.Rocks",
+                       :description => "License.Rocks is building a platform for decentralized software licensing through tokenization. Their vision is to build a framework for defining how digital products such as software can be licensed and create new business opportunities and sales channels for creators of digital products.",
+                       :youtube_img_1x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/license_rock-1@1x.png",
+                       :youtube_img_2x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/license_rock-1@2x.png",
+                       :youtube_link => "https://www.youtube.com/embed/wJ6XkOIkbX0" + autoplay_version,
+                       :project_link => "https://license.rocks/",
+                       :project_link_name => "License.Rocks"
+                     },
+                     {
+                       :title => 'ConnectScale',
+                       :description => "ConnectScale is a sports fishing social community built around a connected device for weighing and tracking catch data from fishing trips.",
+                       :youtube_img_1x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/connect_scale-1@1x.png",
+                       :youtube_img_2x => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/connect_scale-1@2x.png",
+                       :youtube_link => "https://www.youtube.com/embed/MjtcnnqmVBk" + autoplay_version,
+                       :project_link => "https://connectscale.com/",
+                       :project_link_name => "ConnectScale"
+                     }
     ]
   %>
   <div class="use-case-wrap container">
@@ -70,7 +75,7 @@
       <div class="use-case-item">
         <div id="use-cases">
           <div class="pt-3 pt-lg-5 bg-blue">
-            <div class="row">
+            <div class="row align-items-center">
               <div class="col-12 text-center d-lg-none">
               <h4 class="mb-4"><%= data[:title]%></h4>
               </div>
@@ -92,7 +97,7 @@
                 <h4 class="my-4 mt-lg-0 d-none d-lg-block"><%= data[:title]%></h4>
                 <p class="mt-3"><%= data[:description]%></p>
                 <% if data[:project_link].present? %>
-                  <a href="<%= data[:project_link]%>" class="link" target="_blank" title="READ MORE ABOUT <%= data[:project_link_name]%>">CHECK THE PROJECT HERE</a>
+                  <a href="<%= data[:project_link]%>" class="link" target="_blank" title="Read More About <%= data[:project_link_name]%>">CHECK THE PROJECT HERE</a>
                 <%end%>
               </div>
             </div>
